TestRepo2/src/objects/Custom_Ingredient__c.object
<CustomObject>
    <fields>
        <fullName>Ingredient__c</fullName>
        <label>Ingredient</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modifier__c</fullName>
        <label>Modifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipe</label>
        <referenceTo>Recipe__c</referenceTo>
        <relationshipLabel>Custom Ingredients</relationshipLabel>
        <relationshipName>Custom_Ingredients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Ingredient</label>
    <nameField>
        <displayFormat>CIN-{00000}</displayFormat>
        <label>Custom Ingredient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Ingredients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>